src/app/snapshots/jiq__app__app_render__snapshot_tests__snapshot_error_overlay.snap
---
source: src/app/app_render.rs
expression: output
---
"┌ ⚠ Syntax Error (Object - last successful query result) ──────────────────────┐"
"│{                                                                             │"
"│  "test": true                                                                │"
"│}                                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│ ┌ Syntax Error (Ctrl+E to close) ──────────────────────────────────────────┐ │"
"│ │jq: compile error: syntax error at line 1                                 │ │"
"│ └──────────────────────────────────────────────────────────────────────────┘ │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Query [INSERT] ⚠ Syntax Error (Ctrl+E to view)───────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" F1: Help | Shift+Tab: Switch Pane | Ctrl+P/N: Cycle History | ↑/Ctrl+R: History"
